systemd-genie (2.4) bullseye bookworm sid focal jammy; urgency=medium

        * Deprecated support for Debian buster and Ubuntu bionic.

 -- Alistair Young <avatar@arkane-systems.net>  Tue, 22 Mar 2022 08:15:00 -0500

systemd-genie (2.3) buster bullseye bookworm sid bionic focal jammy; urgency=medium

        * Paths-containing-spaces fix (#240).
        * Makefile updates for CI build.
        * Fixed WSL 1 detection.
        * Added -a/--as-user option to allow shell/command as any user.
        * Added support for Ubuntu 22.04 LTS (Jammy Jellyfish).
        * Greater robustness against misconfigured hosts files (fixes #247).
        * arm64 support.
        * Miscellaneous fixes.

 -- Alistair Young <avatar@arkane-systems.net>  Tue, 22 Mar 2022 08:15:00 -0500

systemd-genie (2.2) buster bullseye bookworm sid focal bionic; urgency=medium

        * Single-file package python scripts.
        * Man page fixes.
        * Fixed building on Python 3.10.
        * Dropped the "local" install option (little used; use tarball instead).

 -- Alistair Young <avatar@arkane-systems.net>  Sun, 06 Mar 2022 13:30:00 -0500

systemd-genie (2.1) buster bullseye bookworm sid focal bionic; urgency=medium

        * Documentation updates.
        * Update /etc/hosts after hostname update.
        * Minor fixes.

 -- Alistair Young <avatar@arkane-systems.net>  Mon, 28 Feb 2022 16:03:00 -0500

systemd-genie (2.0b) buster bullseye bookworm sid focal bionic; urgency=medium

        * Major rewrite in Python, eliminating .NET dependency.
        * Moved executables from /usr/libexec/genie to /usr/lib/genie.
        * Allow configuration of hostname suffix.
        * Support for AppArmor namespaces.
        * Work to better handle simultaneity.
        * Extra warnings for problematic states.
        * Miscellaneous fixes.

 -- Alistair Young <avatar@arkane-systems.net>  Tue, 22 Feb 2022 16:40:00 -0500

systemd-genie (1.44) buster bullseye bookworm sid focal bionic; urgency=medium
